@@ -1,24 +1,24 @@
 package com.glebestraikh.stackcalculator.commands;
 
 import com.glebestraikh.stackcalculator.ExecutionContext;
+import com.glebestraikh.stackcalculator.exceptions.commands.ArgumentsNumberException;
 
 import java.util.List;
 
 public class PushCommand implements Command {
     @Override
-    public void run(List<String> args, ExecutionContext context) {
-        if (args.size() != 1) {
-            throw new IllegalArgumentException("Command 'push' requires exactly one argument.");
+    public void run(List<String> CommandArgs, ExecutionContext context) {
+        if (CommandArgs.size() != 1) {
+            throw new ArgumentsNumberException();
         }
 
-        String value = args.get(0);
+        String operand = CommandArgs.getFirst();
 
-        // пушь переменную
-        if (context.isCorrectVariableName(value)) {
-            context.pushStackValue(context.getVariable(value));
-        } // пушь число
+        if (context.isCorrectVariableName(operand)) {
+            context.pushStackValue(context.getVariableValue(operand));
+        }
         else {
-            context.pushStackValue(Double.valueOf(value));
+            context.pushStackValue(Double.valueOf(operand));
         }
     }
 }
